--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.11.2
+black==22.3.0
+click==8.1.2
 dill==0.3.4
 Faker==13.3.4
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
+mypy-extensions==0.4.3
+pathspec==0.9.0
 platformdirs==2.5.1
 pylint==2.13.5
 python-dateutil==2.8.2
